removed dependency to commons.io